[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/raiix_statemachine/images/up_icon.png" type="Texture" id=1]
[ext_resource path="res://addons/raiix_statemachine/images/down_icon.png" type="Texture" id=2]
[ext_resource path="res://addons/raiix_statemachine/StateMachineResourceArrowDataInspector/scripts/CondEdit.gd" type="Script" id=3]
[ext_resource path="res://addons/raiix_statemachine/images/trash_icon.png" type="Texture" id=4]

[node name="CondEdit" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 11.0
margin_right = -15.0
margin_bottom = -15.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 64.0
margin_bottom = 574.0

[node name="UpButton" type="Button" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 285.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
icon = ExtResource( 1 )
expand_icon = true

[node name="DownButton" type="Button" parent="VBoxContainer"]
margin_top = 289.0
margin_right = 64.0
margin_bottom = 574.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
icon = ExtResource( 2 )
expand_icon = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 68.0
margin_right = 927.0
margin_bottom = 574.0
size_flags_horizontal = 3

[node name="RemoveButton" type="Button" parent="."]
margin_left = 931.0
margin_right = 995.0
margin_bottom = 574.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 4 )
expand_icon = true
[connection signal="pressed" from="VBoxContainer/UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_RemoveButton_pressed"]
